added stock page with quotes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		</head>
 		<body>
+			<div><a href="/stocks.html">Stock List</a></div>
 		   <div class="wrapper">
 			  <div class="title-text">
 				 <div class="title login">
